--- a/metricbeat/metricbeat.full.yml
+++ b/metricbeat/metricbeat.full.yml
@@ -49,55 +49,6 @@ metricbeat.modules:
   # EXPERIMENTAL: cgroups can be enabled for the process metricset.
   #cgroups: false
 
-#------------------------------- Apache Module -------------------------------
-#- module: apache
-  #metricsets: ["status"]
-  #enabled: true
-  #period: 10s
-
-  # Apache hosts
-  #hosts: ["http://127.0.0.1"]
-
-  # Path to server status. Default server-status
-  #server_status_path: "server-status"
-
-  # Username of hosts.  Empty by default
-  #username: test
-
-  # Password of hosts. Empty by default
-  #password: test123
-
-#-------------------------------- beats Module -------------------------------
-#- module: beats
-  #metricsets: ["filebeat", "libbeat"]
-  #enabled: true
-  #period: 10s
-  #hosts: ["localhost:6060"]
-
-  # Path to httpprof variables
-  #vars_path: /debug/vars
-
-
-#------------------------------- docker Module -------------------------------
-#- module: docker
-  #metricsets: ["cpu", "info", "memory", "network", "diskio", "container"]
-  #enabled: true
-  #period: 10s
-  #hosts: ["localhost"]
-  #socket: unix:///var/run/docker.sock
-
-  # If dockerbeat has to deal with a TLS-enabled docker daemon, you need to enable TLS and configure path for key and certificates.
-  #tls:
-    # By default, TLS is disabled
-    #enabled: false
-
-#------------------------------- haproxy Module ------------------------------
-#- module: haproxy
-  #metricsets: [stat, info]
-  #enabled: true
-  #period: 10s
-  #hosts: ['tcp://127.0.0.1:14567']
-
 #------------------------------- MongoDB Module ------------------------------
 #- module: mongodb
   #metricsets: ["status"]
@@ -108,34 +59,6 @@ metricbeat.modules:
   # [mongodb://][user:pass@]host[:port]
   #hosts: ["localhost:27017"]
 
-
-#-------------------------------- MySQL Module -------------------------------
-#- module: mysql
-  #metricsets: ["status"]
-  #enabled: true
-  #period: 10s
-
-  # Host DSN should be defined as "tcp(127.0.0.1:3306)/"
-  # The username and password can either be set in the DSN or for all hosts in username and password config option
-  #hosts: ["root@tcp(127.0.0.1:3306)/"]
-
-  # Username of hosts. Empty by default
-  #username: root
-
-  # Password of hosts. Empty by default
-  #password: test
-
-#-------------------------------- Nginx Module -------------------------------
-#- module: nginx
-  #metricsets: ["stubstatus"]
-  #enabled: true
-  #period: 10s
-
-  # Nginx hosts
-  #hosts: ["http://127.0.0.1"]
-
-  # Path to server status. Default server-status
-  #server_status_path: "server-status"
 
 #----------------------------- PostgreSQL Module -----------------------------
 #- module: postgresql
@@ -194,12 +117,97 @@ metricbeat.modules:
   # Redis AUTH password. Empty by default.
   #password: foobared
 
+#-------------------------------- Nginx Module -------------------------------
+#- module: nginx
+  #metricsets: ["stubstatus"]
+  #enabled: true
+  #period: 10s
+
+  # Nginx hosts
+  #hosts: ["http://127.0.0.1"]
+
+  # Path to server status. Default server-status
+  #server_status_path: "server-status"
+
+#-------------------------------- MySQL Module -------------------------------
+#- module: mysql
+  #metricsets: ["status"]
+  #enabled: true
+  #period: 10s
+
+  # Host DSN should be defined as "tcp(127.0.0.1:3306)/"
+  # The username and password can either be set in the DSN or for all hosts in username and password config option
+  #hosts: ["root@tcp(127.0.0.1:3306)/"]
+
+  # Username of hosts. Empty by default
+  #username: root
+
+  # Password of hosts. Empty by default
+  #password: test
+
+#-------------------------------- beats Module -------------------------------
+#- module: beats
+  #metricsets: ["filebeat", "libbeat"]
+  #enabled: true
+  #period: 10s
+  #hosts: ["localhost:6060"]
+
+  # Path to httpprof variables
+  #vars_path: /debug/vars
+
+
+#------------------------------ uwsgibeat Module -----------------------------
+- module: uwsgibeat
+  metricsets: ["stats"]
+  enabled: true
+  period: 1s
+  hosts: ["localhost"]
+
+
 #------------------------------ ZooKeeper Module -----------------------------
 #- module: zookeeper
   #metricsets: ["mntr"]
   #enabled: true
   #period: 10s
   #hosts: ["localhost:2181"]
+
+#------------------------------- haproxy Module ------------------------------
+#- module: haproxy
+  #metricsets: [stat, info]
+  #enabled: true
+  #period: 10s
+  #hosts: ['tcp://127.0.0.1:14567']
+
+#------------------------------- Apache Module -------------------------------
+#- module: apache
+  #metricsets: ["status"]
+  #enabled: true
+  #period: 10s
+
+  # Apache hosts
+  #hosts: ["http://127.0.0.1"]
+
+  # Path to server status. Default server-status
+  #server_status_path: "server-status"
+
+  # Username of hosts.  Empty by default
+  #username: test
+
+  # Password of hosts. Empty by default
+  #password: test123
+
+#------------------------------- docker Module -------------------------------
+#- module: docker
+  #metricsets: ["cpu", "info", "memory", "network", "diskio", "container"]
+  #enabled: true
+  #period: 10s
+  #hosts: ["localhost"]
+  #socket: unix:///var/run/docker.sock
+
+  # If dockerbeat has to deal with a TLS-enabled docker daemon, you need to enable TLS and configure path for key and certificates.
+  #tls:
+    # By default, TLS is disabled
+    #enabled: false
 
 
 
