--- a/metricbeat/module/uwsgi/_meta/fields.yml
+++ b/metricbeat/module/uwsgi/_meta/fields.yml
@@ -7,3 +7,11 @@
       type: group
       description: >
       fields:
+        - name: workers
+          type: nested
+          description: >
+            workers
+          fields:
+            - name: Requests
+              type: integer
+              description: >
